# agb-prediction

./: .gitattributes  .gitignore  Makefile  README.md  gee_script.js  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
input/: AW3D30.tif  CGLS_LC100.tif  S2_B01.tif  S2_B02.tif  S2_B03.tif  S2_B04.tif  S2_B05.tif  S2_B06.tif  S2_B07.tif  S2_B08.tif  S2_B09.tif  S2_B11.tif  S2_B12.tif  S2_B8A.tif  S2_SCL.tif  SAR_PALSAR2.tif
model_pretrained_weights/: statistics_subset_2019-2020-v4.pkl  statistics_subset_2019-2020-v4_new.pkl
model_pretrained_weights/nico/: 18693595-1_best.ckpt  18693595-1_cfg.pkl  60688111-1_best.ckpt  60688111-1_cfg.pkl
notebooks/: demo_inference.ipynb
output/: agb_prediction.tif
scripts/: run_inference.py
src/: constants.py  inference.py
src/imagery_processing/: __init__.py  helper.py
src/models/: __init__.py  helper.py  metrics.py  nico_net.py
src/utils/: config.py
tests/: test_config.py  test_imagery_processing_helper.py  test_metrics.py
